# serializer version: 1
# name: test_sensor[sensor.nettigo_air_monitor_bme280_humidity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_bme280_humidity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
    'original_icon': None,
    'original_name': 'BME280 humidity',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'bme280_humidity',
    'unique_id': 'aa:bb:cc:dd:ee:ff-bme280_humidity',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_bme280_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'Nettigo Air Monitor BME280 humidity',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_bme280_humidity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '45.69',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_bme280_pressure-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_bme280_pressure',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRESSURE: 'pressure'>,
    'original_icon': None,
    'original_name': 'BME280 pressure',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'bme280_pressure',
    'unique_id': 'aa:bb:cc:dd:ee:ff-bme280_pressure',
    'unit_of_measurement': <UnitOfPressure.HPA: 'hPa'>,
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_bme280_pressure-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pressure',
      'friendly_name': 'Nettigo Air Monitor BME280 pressure',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPressure.HPA: 'hPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_bme280_pressure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1011.0117',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_bme280_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_bme280_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'BME280 temperature',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'bme280_temperature',
    'unique_id': 'aa:bb:cc:dd:ee:ff-bme280_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_bme280_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Nettigo Air Monitor BME280 temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_bme280_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7.56',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_bmp180_pressure-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_bmp180_pressure',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRESSURE: 'pressure'>,
    'original_icon': None,
    'original_name': 'BMP180 pressure',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'bmp180_pressure',
    'unique_id': 'aa:bb:cc:dd:ee:ff-bmp180_pressure',
    'unit_of_measurement': <UnitOfPressure.HPA: 'hPa'>,
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_bmp180_pressure-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pressure',
      'friendly_name': 'Nettigo Air Monitor BMP180 pressure',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPressure.HPA: 'hPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_bmp180_pressure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1032.0118',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_bmp180_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_bmp180_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'BMP180 temperature',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'bmp180_temperature',
    'unique_id': 'aa:bb:cc:dd:ee:ff-bmp180_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_bmp180_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Nettigo Air Monitor BMP180 temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_bmp180_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7.56',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_bmp280_pressure-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_bmp280_pressure',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PRESSURE: 'pressure'>,
    'original_icon': None,
    'original_name': 'BMP280 pressure',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'bmp280_pressure',
    'unique_id': 'aa:bb:cc:dd:ee:ff-bmp280_pressure',
    'unit_of_measurement': <UnitOfPressure.HPA: 'hPa'>,
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_bmp280_pressure-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pressure',
      'friendly_name': 'Nettigo Air Monitor BMP280 pressure',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPressure.HPA: 'hPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_bmp280_pressure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1022.0118',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_bmp280_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_bmp280_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'BMP280 temperature',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'bmp280_temperature',
    'unique_id': 'aa:bb:cc:dd:ee:ff-bmp280_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_bmp280_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Nettigo Air Monitor BMP280 temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_bmp280_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5.56',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_dht22_humidity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_dht22_humidity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
    'original_icon': None,
    'original_name': 'DHT22 humidity',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'dht22_humidity',
    'unique_id': 'aa:bb:cc:dd:ee:ff-dht22_humidity',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_dht22_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'Nettigo Air Monitor DHT22 humidity',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_dht22_humidity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '46.23',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_dht22_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_dht22_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'DHT22 temperature',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'dht22_temperature',
    'unique_id': 'aa:bb:cc:dd:ee:ff-dht22_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_dht22_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Nettigo Air Monitor DHT22 temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_dht22_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '6.26',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_ds18b20_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_ds18b20_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'DS18B20 temperature',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'ds18b20_temperature',
    'unique_id': 'aa:bb:cc:dd:ee:ff-ds18b20_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_ds18b20_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Nettigo Air Monitor DS18B20 temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_ds18b20_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12.56',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_heca_humidity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_heca_humidity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
    'original_icon': None,
    'original_name': 'HECA humidity',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'heca_humidity',
    'unique_id': 'aa:bb:cc:dd:ee:ff-heca_humidity',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_heca_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'Nettigo Air Monitor HECA humidity',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_heca_humidity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '49.97',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_heca_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_heca_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'HECA temperature',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'heca_temperature',
    'unique_id': 'aa:bb:cc:dd:ee:ff-heca_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_heca_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Nettigo Air Monitor HECA temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_heca_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7.95',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_last_restart-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nettigo_air_monitor_last_restart',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last restart',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'last_restart',
    'unique_id': 'aa:bb:cc:dd:ee:ff-uptime',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_last_restart-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Nettigo Air Monitor Last restart',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_last_restart',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-04-15T05:03:33+00:00',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_mh_z14a_carbon_dioxide-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_mh_z14a_carbon_dioxide',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.CO2: 'carbon_dioxide'>,
    'original_icon': None,
    'original_name': 'MH-Z14A carbon dioxide',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'mhz14a_carbon_dioxide',
    'unique_id': 'aa:bb:cc:dd:ee:ff-mhz14a_carbon_dioxide',
    'unit_of_measurement': 'ppm',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_mh_z14a_carbon_dioxide-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'carbon_dioxide',
      'friendly_name': 'Nettigo Air Monitor MH-Z14A carbon dioxide',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ppm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_mh_z14a_carbon_dioxide',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '865.0',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_pmsx003_common_air_quality_index-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_pmsx003_common_air_quality_index',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PMSx003 common air quality index',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'pmsx003_caqi',
    'unique_id': 'aa:bb:cc:dd:ee:ff-pms_caqi',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_pmsx003_common_air_quality_index-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nettigo Air Monitor PMSx003 common air quality index',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_pmsx003_common_air_quality_index',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '19',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_pmsx003_common_air_quality_index_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'very_low',
        'low',
        'medium',
        'high',
        'very_high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_pmsx003_common_air_quality_index_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'PMSx003 common air quality index level',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'pmsx003_caqi_level',
    'unique_id': 'aa:bb:cc:dd:ee:ff-pms_caqi_level',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_pmsx003_common_air_quality_index_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Nettigo Air Monitor PMSx003 common air quality index level',
      'options': list([
        'very_low',
        'low',
        'medium',
        'high',
        'very_high',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_pmsx003_common_air_quality_index_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'very_low',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_pmsx003_pm1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_pmsx003_pm1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PM1: 'pm1'>,
    'original_icon': None,
    'original_name': 'PMSx003 PM1',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'pmsx003_pm1',
    'unique_id': 'aa:bb:cc:dd:ee:ff-pms_p0',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_pmsx003_pm1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm1',
      'friendly_name': 'Nettigo Air Monitor PMSx003 PM1',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_pmsx003_pm1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '6.0',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_pmsx003_pm10-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_pmsx003_pm10',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PM10: 'pm10'>,
    'original_icon': None,
    'original_name': 'PMSx003 PM10',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'pmsx003_pm10',
    'unique_id': 'aa:bb:cc:dd:ee:ff-pms_p1',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_pmsx003_pm10-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm10',
      'friendly_name': 'Nettigo Air Monitor PMSx003 PM10',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_pmsx003_pm10',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.0',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_pmsx003_pm2_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_pmsx003_pm2_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PM25: 'pm25'>,
    'original_icon': None,
    'original_name': 'PMSx003 PM2.5',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'pmsx003_pm25',
    'unique_id': 'aa:bb:cc:dd:ee:ff-pms_p2',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_pmsx003_pm2_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm25',
      'friendly_name': 'Nettigo Air Monitor PMSx003 PM2.5',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_pmsx003_pm2_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '11.0',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sds011_common_air_quality_index-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_sds011_common_air_quality_index',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'SDS011 common air quality index',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sds011_caqi',
    'unique_id': 'aa:bb:cc:dd:ee:ff-sds011_caqi',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sds011_common_air_quality_index-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nettigo Air Monitor SDS011 common air quality index',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_sds011_common_air_quality_index',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '19',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sds011_common_air_quality_index_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'very_low',
        'low',
        'medium',
        'high',
        'very_high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_sds011_common_air_quality_index_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'SDS011 common air quality index level',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sds011_caqi_level',
    'unique_id': 'aa:bb:cc:dd:ee:ff-sds011_caqi_level',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sds011_common_air_quality_index_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Nettigo Air Monitor SDS011 common air quality index level',
      'options': list([
        'very_low',
        'low',
        'medium',
        'high',
        'very_high',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_sds011_common_air_quality_index_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'very_low',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sds011_pm10-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_sds011_pm10',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PM10: 'pm10'>,
    'original_icon': None,
    'original_name': 'SDS011 PM10',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sds011_pm10',
    'unique_id': 'aa:bb:cc:dd:ee:ff-sds011_p1',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sds011_pm10-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm10',
      'friendly_name': 'Nettigo Air Monitor SDS011 PM10',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_sds011_pm10',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.65',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sds011_pm2_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_sds011_pm2_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PM25: 'pm25'>,
    'original_icon': None,
    'original_name': 'SDS011 PM2.5',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sds011_pm25',
    'unique_id': 'aa:bb:cc:dd:ee:ff-sds011_p2',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sds011_pm2_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm25',
      'friendly_name': 'Nettigo Air Monitor SDS011 PM2.5',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_sds011_pm2_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '11.03',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sht3x_humidity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_sht3x_humidity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
    'original_icon': None,
    'original_name': 'SHT3X humidity',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sht3x_humidity',
    'unique_id': 'aa:bb:cc:dd:ee:ff-sht3x_humidity',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sht3x_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'Nettigo Air Monitor SHT3X humidity',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_sht3x_humidity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '34.69',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sht3x_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_sht3x_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'SHT3X temperature',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sht3x_temperature',
    'unique_id': 'aa:bb:cc:dd:ee:ff-sht3x_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sht3x_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Nettigo Air Monitor SHT3X temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_sht3x_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '6.28',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_signal_strength-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nettigo_air_monitor_signal_strength',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.SIGNAL_STRENGTH: 'signal_strength'>,
    'original_icon': None,
    'original_name': 'Signal strength',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff-signal',
    'unit_of_measurement': 'dBm',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_signal_strength-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'signal_strength',
      'friendly_name': 'Nettigo Air Monitor Signal strength',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'dBm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_signal_strength',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-72.0',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sps30_common_air_quality_index-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_sps30_common_air_quality_index',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'SPS30 common air quality index',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sps30_caqi',
    'unique_id': 'aa:bb:cc:dd:ee:ff-sps30_caqi',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sps30_common_air_quality_index-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nettigo Air Monitor SPS30 common air quality index',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_sps30_common_air_quality_index',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '54',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sps30_common_air_quality_index_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'very_low',
        'low',
        'medium',
        'high',
        'very_high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_sps30_common_air_quality_index_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'SPS30 common air quality index level',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sps30_caqi_level',
    'unique_id': 'aa:bb:cc:dd:ee:ff-sps30_caqi_level',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sps30_common_air_quality_index_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Nettigo Air Monitor SPS30 common air quality index level',
      'options': list([
        'very_low',
        'low',
        'medium',
        'high',
        'very_high',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_sps30_common_air_quality_index_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'medium',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sps30_pm1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_sps30_pm1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PM1: 'pm1'>,
    'original_icon': None,
    'original_name': 'SPS30 PM1',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sps30_pm1',
    'unique_id': 'aa:bb:cc:dd:ee:ff-sps30_p0',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sps30_pm1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm1',
      'friendly_name': 'Nettigo Air Monitor SPS30 PM1',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_sps30_pm1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '31.23',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sps30_pm10-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_sps30_pm10',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PM10: 'pm10'>,
    'original_icon': None,
    'original_name': 'SPS30 PM10',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sps30_pm10',
    'unique_id': 'aa:bb:cc:dd:ee:ff-sps30_p1',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sps30_pm10-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm10',
      'friendly_name': 'Nettigo Air Monitor SPS30 PM10',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_sps30_pm10',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '21.23',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sps30_pm2_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_sps30_pm2_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.PM25: 'pm25'>,
    'original_icon': None,
    'original_name': 'SPS30 PM2.5',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sps30_pm25',
    'unique_id': 'aa:bb:cc:dd:ee:ff-sps30_p2',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sps30_pm2_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm25',
      'friendly_name': 'Nettigo Air Monitor SPS30 PM2.5',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_sps30_pm2_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '34.32',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sps30_pm4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nettigo_air_monitor_sps30_pm4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'SPS30 PM4',
    'platform': 'nam',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sps30_pm4',
    'unique_id': 'aa:bb:cc:dd:ee:ff-sps30_p4',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_sensor[sensor.nettigo_air_monitor_sps30_pm4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Nettigo Air Monitor SPS30 PM4',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nettigo_air_monitor_sps30_pm4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24.72',
  })
# ---
